force-app/main/default/objects/CAMPX__Event__c/CAMPX__Event__c.object-meta.xml
<CustomObject>
    <description>Serves as the central hub for managing event details, tracking from planning through completion with fields for status, financials, and venue capacity. It automates key processes like financial tracking and status updates to streamline event management.</description>
    <label>Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>