force-app/main/default/objects/CAMPX__Event__c/fields/CAMPX__GrossRevenue__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__GrossRevenue__c</fullName>
    <description>Indicates the total income generated from an event before any expenses are deducted.</description>
    <inlineHelpText>Indicates the total income generated from an event before any expenses are deducted.</inlineHelpText>
    <label>Gross Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>