force-app/main/default/objects/CAMPX__Event__c/fields/CAMPX__NetRevenue__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__NetRevenue__c</fullName>
    <description>Represents the total income generated from an event after all associated expenses have been subtracted from the gross revenue</description>
    <inlineHelpText>Represents the total income generated from an event after all associated expenses have been subtracted from the gross revenue</inlineHelpText>
    <label>Net Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>