force-app/main/default/objects/CAMPX__Event__c/fields/CAMPX__Status__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Status__c</fullName>
    <description>The statuses of an event should reflect its lifecycle from initial planning to post-event activities</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>