force-app/main/default/objects/CAMPX__Event__c/fields/CAMPX__StatusChangeDate__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__StatusChangeDate__c</fullName>
    <description>Records the exact date and time when an event&apos;s status is updated, providing a timestamp for tracking progress and changes.</description>
    <inlineHelpText>Records the exact date and time when an event&apos;s status is updated, providing a timestamp for tracking progress and changes.</inlineHelpText>
    <label>Status Change Date</label>
    <type>DateTime</type>
</CustomField>