force-app/main/default/objects/CAMPX__Event__c/fields/CAMPX__TotalExpenses__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__TotalExpenses__c</fullName>
    <description>Represents the cumulative costs incurred in organizing and hosting the event.</description>
    <inlineHelpText>Represents the cumulative costs incurred in organizing and hosting the event.</inlineHelpText>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>