force-app/main/default/objects/CAMPX__Event__c/fields/CAMPX__Venue_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Venue_Capacity__c</fullName>
    <description>Specifies the maximum number of attendees that can be accommodated at the event&apos;s location.</description>
    <inlineHelpText>Specifies the maximum number of attendees that can be accommodated at the event&apos;s location.</inlineHelpText>
    <label>Venue Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>